--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "eject": "react-app-rewired eject",
     "postinstall": "yarn gen:types",
     "gen:types": "apollo client:codegen ./src/graphql/types.ts --queries=src/graphql/**/*.ts --endpoint=https://api.shxd.comartek.com/graphql --target=typescript --outputFlat",
-    "deploy": "shipit dev deploy --shipitfile ./shipitfile.js"
+    "deploy:staging": "shipit staging deploy --shipitfile ./shipitfile.js"
   },
   "eslintConfig": {
     "extends": "react-app"
