--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/react-router": "3.0.20",
     "@types/react-router-dom": "^4.3.5",
     "@types/webpack-env": "^1.14.0",
-    "antd": "^3.21.4",
+    "antd": "^3.26.0",
     "apollo-boost": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-cli": "^0.4.0",
@@ -36,8 +36,10 @@
     "graphql-tag": "^2.10.1",
     "jest": "24.8.0",
     "minimist": "^1.2.0",
-    "moment": "2.18.1",
+    "moment": "^2.24.0",
     "numeral": "^2.0.6",
+    "pdfjs": "^2.3.2",
+    "pdfjs-dist": "^2.2.228",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "16.9.0",
@@ -90,7 +92,7 @@
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "react-app-rewire-less-modules": "^1.3.0",
-    "react-app-rewired": "^2.1.3",
+    "react-app-rewired": "^2.1.5",
     "shipit-cli": "^5.1.0",
     "shipit-deploy": "^5.1.0",
     "tslint-config-airbnb": "^5.11.1",
