--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-hot-loader": "^4.12.13",
     "react-image-lightbox": "^4.2.1",
     "react-lazyload": "^2.2.7",
+    "react-pdf": "^4.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-tap-event-plugin": "^3.0.3",
