join api cmsUser and partner

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,8 +20,10 @@
     "comartek",
     "inmemory",
     "ixosoftware",
+    "popconfirm",
+    "refetch",
     "shipitfile",
     "shxd",
     "zoominton"
-]
+  ]
 }
