--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-tap-event-plugin": "^3.0.3",
+    "react-toast-notifications": "^2.4.0",
     "speakingurl": "^14.0.1",
     "styled-components": "^4.4.1",
     "typescript": "3.3.3333",
