--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,13 +17,16 @@
   "cSpell.words": [
     "GRAPHQL",
     "Sider",
+    "antd",
     "comartek",
     "inmemory",
     "ixosoftware",
     "popconfirm",
     "refetch",
+    "rerender",
     "shipitfile",
     "shxd",
+    "uploader",
     "zoominton"
   ]
 }
