--- a/.env.prod
+++ b/.env.prod
@@ -1,3 +1,3 @@
 PORT=5102
 REACT_APP_GRAPHQL_ENDPOINT=https://api.shxd.comartek.com/graphql
-
+WORKER_SRC=https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.2.228/pdf.worker.js
