--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "apollo-link-http": "^1.5.16",
     "apollo-link-retry": "^2.2.15",
     "apollo-link-state": "^0.4.2",
-    "apollo-upload-client": "^11.0.0",
+    "apollo-upload-client": "^12.1.0",
     "apollo-utilities": "^1.3.2",
     "async": "^2.5.0",
     "bizcharts": "^3.5.5",
@@ -32,13 +32,13 @@
     "cross-env": "^5.2.1",
     "customize-cra": "^0.7.0",
     "dotenv": "^8.1.0",
+    "flat-to-nested": "^1.1.0",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "jest": "24.8.0",
     "minimist": "^1.2.0",
     "moment": "^2.24.0",
     "numeral": "^2.0.6",
-    "pdfjs": "^2.3.2",
     "pdfjs-dist": "^2.2.228",
     "promise": "8.0.1",
     "raf": "3.4.0",
