--- a/package.json
+++ b/package.json
@@ -36,10 +36,11 @@
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "jest": "24.8.0",
+    "lodash": "^4.17.15",
     "minimist": "^1.2.0",
     "moment": "^2.24.0",
     "numeral": "^2.0.6",
-    "pdfjs-dist": "^2.2.228",
+    "p-queue": "^6.3.0",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "16.9.0",
@@ -92,6 +93,7 @@
     "apollo": "^2.21.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "pdfjs-dist": "^2.2.228",
     "react-app-rewire-less-modules": "^1.3.0",
     "react-app-rewired": "^2.1.5",
     "shipit-cli": "^5.1.0",
