--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "skipDefaultLibCheck": true,
     "allowJs": true,
     "skipLibCheck": true,
@@ -11,7 +15,6 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
     "forceConsistentCasingInFileNames": false,
@@ -21,8 +24,13 @@
     "strictNullChecks": false,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
-    "downlevelIteration": true
+    "downlevelIteration": true,
+    "isolatedModules": true
   },
-  "include": ["src"],
-  "exclude": ["src/assets/*"]
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "src/assets/*"
+  ]
 }
